[gd_scene load_steps=2 format=3 uid="uid://beojxqj7yugwu"]

[ext_resource type="Script" path="res://scenes/menus/you_won_screen.gd" id="1_5vbjb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vbjb")

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 442.0
offset_top = 201.0
offset_right = 736.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 35
text = "You've escaped!"
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 434.0
offset_top = 276.0
offset_right = 718.0
offset_bottom = 299.0
text = "Level x completed in 00:00"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -70.5
offset_right = 55.0
offset_bottom = 70.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueButton")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
